--- a/css/burgton-site.css
+++ b/css/burgton-site.css
@@ -1,2 +1,4 @@
-@import "reset.css";
-@import "type.css";
+@import 'reset.css';
+@import 'variables.css';
+@import 'type.css';
+@import 'topbar.css';
