[TASK] Add sidebar, sidebar styles and animate on smaller devices

--- a/css/burgton-site.css
+++ b/css/burgton-site.css
@@ -1,4 +1,7 @@
 @import 'reset.css';
 @import 'variables.css';
 @import 'type.css';
+@import 'container.css';
 @import 'topbar.css';
+@import 'sidebar.css';
+@import 'nav.css';
