--- a/css/topbar.css
+++ b/css/topbar.css
@@ -3,8 +3,8 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 80px;
-    padding: 0 48px;
+    height: var(--topbar-height);
+    padding: 0 2rem;
     background-color: var(--color--highlight);
     color: white;
     display: flex;
@@ -40,4 +40,14 @@
 .topbar__link:focus,
 .topbar__link:hover {
     background-color: rgba(255, 255, 255, .85);
+}
+
+@media screen and (min-width: 1000px) {
+    .topbar__button {
+        display: none;
+    }
+
+    .topbar__title {
+        margin-left: 0;
+    }
 }
