--- a/css/burgton-site.css
+++ b/css/burgton-site.css
@@ -5,3 +5,6 @@
 @import 'topbar.css';
 @import 'sidebar.css';
 @import 'nav.css';
+@import 'content.css';
+@import 'section.css';
+@import 'code.css';
