--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -1,10 +1,12 @@
 .sidebar {
+    position: fixed;
+    left: 0;
     width: var(--sidebar-width);
     height: calc(100vh - var(--topbar-height));
-    background-color: var(--color--bg);
+    background-color: var(--color-sidebar-bg);
     padding: 2rem;
     transform: translateX(-100%);
-    transition: transform .3s ease-in-out;
+    transition: transform var(--animation-speed-normal) ease-in-out;
 }
 
 #contentContainer.nav-active .sidebar {
