--- a/css/topbar.css
+++ b/css/topbar.css
@@ -5,10 +5,11 @@
     width: 100%;
     height: var(--topbar-height);
     padding: 0 2rem;
-    background-color: var(--color--highlight);
+    background-color: var(--color-highlight);
     color: white;
     display: flex;
     align-items: center;
+    z-index: 2;
 }
 
 .topbar__button {
