--- a/css/type.css
+++ b/css/type.css
@@ -1,1 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
+
+a {
+    text-decoration: none;
+    color: var(--color-highlight);
+}
+
+a:focus, a:hover {
+    cursor: pointer;
+    opacity: .8;
+}
