--- a/css/variables.css
+++ b/css/variables.css
@@ -1,11 +1,15 @@
 body {
     /* COLORS */
-    --color--highlight: #66CC99;
-    --color--bg: #F1F3F5;
+    --color-highlight: #66CC99;
+    --color-sidebar-bg: #F1F3F5;
+    --color-content-bg: #F9F9FB;
     --color-grey-dark: #4C5253;
     --color-grey-light: #848B8D;
 
     /* SIZES */
     --topbar-height: 4rem;
     --sidebar-width: 320px;
+
+    /* ANIMATION */
+    --animation-speed-normal: .3s;
 }
