--- a/css/topbar.css
+++ b/css/topbar.css
@@ -21,6 +21,13 @@
     flex-grow: 1;
     margin-left: 3rem;
     text-transform: uppercase;
+    font-size: 1.3rem;
+}
+
+@media screen and (min-width: 600px) {
+    .topbar__title {
+        font-size: 2rem;
+    }
 }
 
 .topbar__title-span {
