--- a/css/code.css
+++ b/css/code.css
@@ -5,10 +5,17 @@ code[class*="language-"], pre[class*="language-"] {
     border-radius: 2px;
 }
 
-code[class*="language-shell-session"] {
-    font-size: 12px !important;
+code[class*="language-"], pre[class*="language-"] {
+    font-size: 13px !important;
+
 }
 
 .code__example {
     margin-bottom: 1.5rem !important;
+}
+
+code, code span {
+    font-family: monospace !important;
+    font-size: 13px !important;
+    align-self: center;
 }
