--- a/css/section.css
+++ b/css/section.css
@@ -13,7 +13,8 @@
     color: var(--color-grey-light);
     text-transform: uppercase;
     padding-bottom: .5rem;
-    border-bottom: 1px solid #e8e8e8;
+    border-bottom: 1px solid var(--color-highlight);
+    margin-bottom: 2rem;
 }
 
 .section__text {
