--- a/css/variables.css
+++ b/css/variables.css
@@ -1,6 +1,7 @@
 body {
     /* COLORS */
     --color-highlight: #66CC99;
+    --color-highlight-light: #bce6d1;
     --color-sidebar-bg: #F1F3F5;
     --color-content-bg: #F9F9FB;
     --color-grey-dark: #4C5253;
