--- a/css/api.css
+++ b/css/api.css
@@ -1,144 +1,50 @@
-.api__card {
-    margin-bottom: 2rem;
-    padding-left: 1.5rem;
-}
-
-.api__title {
-    color: var(--color-grey-light);
-    font-weight: 400;
+.api__table {
     margin-bottom: 1rem;
-    margin-left: -1.5rem;
-}
-
-.api__description {
-    font-weight: 300;
-    color: var(--color-grey-light);
-    line-height: 1.5;
-    margin-bottom: .5rem;
-}
-
-.api__specs {
-    opacity: .6;
-    font-weight: 300;
-}
-
-.api__possibilities {
     display: grid;
-    grid-template-columns: auto 1fr;
-    grid-gap: .5rem;
-    font-weight: 300;
-    color: var(--color-grey-light);
-    line-height: 1.4;
-}
-
-.api__example-title {
-    background-color: #e8e8e8;
-    color: var(--color-grey-light);
-    padding: .25rem 1rem;
-    margin-top: 1rem;
-    border-radius: 2px 2px 0 0;
-    font-weight: 300;
+    grid-template-columns: 120px 1fr;
+    grid-gap: .25rem;
+    padding: .5rem;
+    background: white;
+    box-shadow: 0 0 10px 0 rgba(100, 100, 100, .1);
     font-size: .875rem;
 }
 
-.api__example-language {
-    position: absolute;
-    right: .875rem;
-    text-transform: uppercase;
-    font-weight: 600;
-    font-size: 12px;
-    opacity: .5;
-    line-height: 16px;
+.api__table-header,
+.api__table-content {
+    display: contents;
 }
 
-.api__example {
-    margin-top: 0 !important;
-    border-radius: 0 0 2px 2px !important;
+.api__table-title {
+    grid-column: 0 / 1;
+    color: var(--color-grey-light);
 }
 
-.api__button-container {
-    position: relative;
-    height: 8rem;
-    width: 8rem;
-    background: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    box-shadow: 0 0 10px 0 rgba(150, 150, 150, 0.2);
-    margin: 1rem auto;
+.api__table-title:nth-child(1) {
+    grid-row: 1;
 }
 
-
-#circle-one, .circle-two, #circle-three {
-    height: .75rem;
-    width: .75rem;
-    background-color: #e8e8e8;
-    position: absolute;
-    right: .5rem;
-    border-radius: 50%;
-    transition: background-color var(--animation-speed-normal) ease-out, left var(--animation-speed-normal) ease-out;
+.api__table-title:nth-child(2) {
+    grid-row: 2;
 }
 
-#circle-one, #circle-three {
-    top: .5rem;
+.api__table-title:nth-child(3) {
+    grid-row: 3;
 }
 
-#circle-one.active, #circle-three.active {
-    background-color: tomato;
+.api__table-title:nth-child(4) {
+    grid-row: 4;
 }
 
-.circle-two {
-    top: 1.5rem;
+.api__table-info {
+    font-weight: 300;
+    color: var(--color-grey-light);
+    line-height: 1.5;
 }
 
-.circle-two.colorful {
-    background-color: rebeccapurple;
+.api__table-info--type {
+    font-style: italic;
 }
 
-#api-css-1 {
-    --burgton-button-line-color: tomato;
-}
-
-#api-css-2 {
-    --burgton-button-line-color-active: purple;
-}
-
-#api-css-3 {
-    --burgton-button-animation-duration: 1s;
-}
-
-#api-css-4 {
-    --burgton-button-animation-delay: 1s;
-}
-
-#api-css-5 {
-    --burgton-button-easing: linear;
-}
-
-#api-css-6 {
-    --burgton-button-scale: 1.5;
-}
-
-#api-css-7 {
-    --burgton-button-border-radius: 2px;
-}
-
-#api-css-8 {
-    --burgton-button-label-font-size: 10px;
-}
-
-#api-css-9 {
-    --burgton-button-label-font-color: tomato;
-}
-
-#api-css-10 {
-    --burgton-button-label-font-color-active: purple;
-}
-
-#api-css-11 {
-    --burgton-button-label-font-weight: 600;
-}
-
-#api-css-12 {
-    --burgton-button-label-text-transform: capitalize;
+.api__table-example {
+    grid-column: 1 / -1;
 }
